[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/UI/Pile_Scroller_Background.png" type="Texture2D" id=1]
[ext_resource path="res://Scripts/Pile_Scroller.gd" type="Script" id=2]

[node name="Pile_Scroller" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1065.0
offset_bottom = -860.0
custom_minimum_size = Vector2( 855, 220 )
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource( 1 )

[node name="Deck_Scroller" type="ScrollContainer" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 845.0
offset_bottom = 210.0
custom_minimum_size = Vector2( 835, 200 )

[node name="Deck_Container" type="HBoxContainer" parent="Deck_Scroller"]
offset_right = 835.0
offset_bottom = 200.0
custom_minimum_size = Vector2( 835, 200 )

[node name="Focus_Blocker" type="Container" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 845.0
offset_bottom = 210.0
custom_minimum_size = Vector2( 835, 200 )
